{
    "name": "Inputs",
    "maps": [
        {
            "name": "Player",
            "id": "ae6302c8-d64d-46cd-800b-f3aa1ecb27c4",
            "actions": [
                {
                    "name": "Pular",
                    "type": "Button",
                    "id": "a67fc990-996e-4820-a13f-d18168aaa02c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Andar",
                    "type": "PassThrough",
                    "id": "cd0c5588-ea11-4da5-86ad-1ba59492e010",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Empurrar",
                    "type": "Button",
                    "id": "ba7c1749-f94a-4dc1-a1a0-c300c651fbbe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Agachar",
                    "type": "Button",
                    "id": "801770fe-73e8-4d88-b825-463691ffe414",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "pegar",
                    "type": "Button",
                    "id": "c76eaa09-962e-41fa-9c1d-1948ada2e114",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SuperPulo",
                    "type": "Button",
                    "id": "cdaf935e-766f-4a29-ba40-8f4fda8f8714",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Olhoinvisivel",
                    "type": "Button",
                    "id": "49b483ff-eca4-49d6-83f2-7294b0bd58cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "990b7dc3-c568-4d40-8d09-47b26c67338a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pular",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58cdafaa-3777-4dee-90d6-c60fa70aec7d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Empurrar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a729f2eb-d9b1-42d2-9962-c9ecd1493e87",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Agachar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "cd214fe6-6d0a-4782-aa83-5821fcf5fc5a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Andar",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a2962a19-35af-456c-88d2-f6884f914728",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Andar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f56d1ba9-d7f9-470d-b493-14dae41993d5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Andar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b7ef6f08-42d7-4354-8b2d-ceec08557afe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Andar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f7ea2bfb-75af-414d-8bcb-e315def7a83b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Andar",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e558831a-ac4e-45e5-81ca-6e0c30b1782d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pegar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b25387ec-6ec1-410c-9f77-60ff78e1b6c4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuperPulo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62608ba0-d980-43d0-be74-f27212695226",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Olhoinvisivel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}